--- a/devfile.yaml
+++ b/devfile.yaml
@@ -110,7 +110,7 @@ commands:
   - id: pip-install
     exec:
       label: "Z: Install the PIP Requirements"
-      commandLine: '/usr/local/bin/pip install -r requirements.txt'
+      commandLine: 'pip install -r requirements.txt'
       workingDir: ${PROJECT_SOURCE}
       group:
         kind: build
