--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,13 +3,13 @@
         "*.yaml": "ansible",
         "*.yml": "ansible"
       },
-    "ansible.ansible.path": "/usr/local/bin/ansible",
-    "ansible.python.interpreterPath": "/bin/python",
+    "ansible.ansible.path": "/home/jbailey/.local/bin/ansible",
+    "ansible.python.interpreterPath": "/home/jbailey/.local/bin/python3",
     "ansible.ansible.useFullyQualifiedCollectionNames": true,
-    "ansible.ansibleNavigator.path": "ansible-navigator",
+    "ansible.ansibleNavigator.path": "/home/jbailey/.local/bin/ansible-navigator",
     "ansible.completion.provideModuleOptionAliases": true,
     "ansible.completion.provideRedirectModules": true,
     "ansible.validation.enabled": true,
     "ansible.validation.lint.enabled": true,
-    "ansible.validation.lint.path": "/usr/local/bin/ansible-lint"
+    "ansible.validation.lint.path": "/home/jbailey/.local/bin/ansible-lint"
 }
